--- a/angular/package.json
+++ b/angular/package.json
@@ -39,5 +39,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.2"
+  },
+  "engines": {
+    "node": "18.18.2"
   }
 }
