--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,11 +1,11 @@
-name: Déploiement de laravel
+name: Déploiement du proket
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  deployement-laravel:
+  deploiement-laravel:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
