--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -58,10 +58,10 @@ jobs:
           sudo chown -R $USER:www-data bootstrap/cache
           sudo chmod -R 775 storage
           sudo chmod -R 775 bootstrap/cache
-          php artisan key:generate
-          php artisan migrate
-          php artisan config:cache
-          php artisan route:cache
+          sudo php artisan key:generate
+          sudo php artisan migrate
+          sudo php artisan config:cache
+          sudo php artisan route:cache
       if: env.FILES_EXIST == 'true'
       
     - name: Angular Setup Node.js
