--- a/.github/workflows/deploiement.yml
+++ b/.github/workflows/deploiement.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Laravel - copy files to server
       uses: appleboy/scp-action@master
       with:
-        host: 134.209.16.92
-        username: adminbha
+        host: ${{ secrets.SSH_IP }}
+        username: ${{ secrets.SSH_USER }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         source: "./laravel/"
@@ -26,8 +26,8 @@ jobs:
     - name: Laravel - Deploy back
       uses: appleboy/ssh-action@v1.0.0
       with:
-        host: 134.209.16.92
-        username: adminbha
+        host: ${{ secrets.SSH_IP }}
+        username: ${{ secrets.SSH_USER }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         script: |
@@ -44,6 +44,7 @@ jobs:
           php artisan migrate
           php artisan config:cache
           php artisan route:cache
+          rm -rf /var/www/nuit-de-l-info-2023/*
       
     - name: Angular Setup Node.js
       uses: actions/setup-node@v2
@@ -59,8 +60,8 @@ jobs:
     - name: Angular - Copy files to server
       uses: appleboy/scp-action@master
       with:
-        host: 134.209.16.92
-        username: adminbha
+        host: ${{ secrets.SSH_IP }}
+        username: ${{ secrets.SSH_USER }}
         password: ${{ secrets.SSH_PASSWORD }}
         port: 22
         source: "./angular/dist/angular"  
