--- a/angular/package.json
+++ b/angular/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^17.0.4",
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
+    "flowbite": "^2.2.0",
     "ngx-cookie-service": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -43,11 +44,6 @@
   },
   "engines": {
     "node": "18.18.2"
-  },
-  "workspaces": {
-    "nohoist": [
-        "@tailwindcss/forms",
-        "@tailwindcss/forms/**"
-    ]
   }
+  
 }
